[package]
name = "deserialize_custom_strings"
version = "0.1.3"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Utility functions for deserializing fields from different types or as custom strings (e.g. emails or urls) using serde"
keywords = ["serde", "json", "api", "string", "decoding"]
homepage = "https://github.com/jofas/deserialize_custom_strings"
repository = "https://github.com/jofas/deserialize_custom_strings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.125", features = ["derive"] }
regex = "^1.4.5"

[dev-dependencies]
serde_json = "^1.0.64"
