[package]
name = "deserialize_custom_strings"
version = "0.1.3"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Utility functions for deserializing fields from different types or as custom strings (e.g. emails or urls) using serde"
keywords = ["serde", "json", "api", "string", "decoding"]
homepage = "https://github.com/jofas/deserialize_custom_strings"
repository = "https://github.com/jofas/deserialize_custom_strings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.125", features = ["derive"] }
regex = "^1.6.0"
lazy_static = "^1.4.0"
validator = { version = "^0.16.0", features = ["phone"] }

[dev-dependencies]
serde_json = "^1.0.64"
