[package]
name = "deserialize_custom_strings"
version = "0.1.3"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Edge-case handling for serde. Helps you integrate unintuitive and complex APIs and fortifies your application against badly formatted user input"
keywords = ["serde", "json", "api", "string", "decoding"]
homepage = "https://github.com/jofas/deserialize_custom_strings"
repository = "https://github.com/jofas/deserialize_custom_strings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.125", features = ["derive"] }
regex = "^1.6.0"
lazy_static = "^1.4.0"
validator = { version = "^0.16.0", features = ["phone"] }

[dev-dependencies]
serde_json = "^1.0.64"
